[GITLAB] Adicionados entpoints: /gitlab/comment + /gitlab/push
